k8s-specifications/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: voting-route
  namespace: default
spec:
  parentRefs:
    - name: traefik-gw
      sectionName: http
  hostnames:
    - voting.exampl.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vote
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /results
      backendRefs:
        - name: result
          port: 8081
